--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,7 @@
+@import "flowbite/src/themes/default";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import "flowbite/src/themes/default";
-
 
 :root {
   --qwik-dark-blue: #006ce9;
@@ -30,4 +28,21 @@ body {
   padding: 0;
   margin: 0;
   line-height: inherit;
+}
+
+.normal-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.loading-button {
+  padding: 10px 20px;
+  background-color: gray;
+  color: white;
+  border: none;
+  cursor: not-allowed;
+  opacity: 0.7;
 }
