--- a/src/global.css
+++ b/src/global.css
@@ -19,7 +19,7 @@ html {
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Plus Jakarta Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
@@ -47,7 +47,6 @@ body {
   opacity: 0.7;
 }
 
-
 .custom-image-border::after {
   content: "";
   position: absolute;
@@ -59,7 +58,6 @@ body {
   border-bottom: 8px solid white;
   border-radius: 0 0 0.5rem 0;
 }
-
 
 @keyframes float {
   0%, 100% { transform: translateY(0) translateX(0); }
