--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Screen reader only utility class */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 :root {
   --qwik-dark-blue: #006ce9;
   --qwik-light-blue: #1054F1;
